<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main_page"
        android:icon="@drawable/main_page_icon"
        android:title="@string/nav_main_button" />

    <item
        android:id="@+id/navigation_plan_page"
        android:icon="@drawable/plan_page_icon"
        android:title="@string/nav_plan_button" />
    <item
        android:id="@+id/navigation_recipe_page"
        android:icon="@drawable/recipe_page_icon"
        android:title="@string/nav_recipe_button" />
    <item
        android:id="@+id/navigation_notice_page"
        android:icon="@drawable/notice_page_icon"
        android:title="@string/nav_notice_button" />
    <item
        android:id="@+id/navigation_my_page"
        android:icon="@drawable/my_page_icon"
        android:title="@string/nav_my_button" />

</menu>